--- a/css/custom.css
+++ b/css/custom.css
@@ -27,3 +27,18 @@ h2 {
 img{
   zoom:1.5;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+/** An element that fades in */
+.scene_element--fadein {
+  animation: fadeIn 2s;
+}
